# Py_lessons

02/: print.py  print_colour.py
03/: colour_text.py  simbol_counter.py  word_counter.py
04/: match.py  print_html_parser.py  word_counter_function.py
05/: copy_module.py  game.py  list.py  list_copy.py  pass_by_obj_ref.py
06/: set_gender.py  tuple_mult_table.py  while.py
07/: customers_string.py  customers_string_conv_dict.py  customers_string_conv_dict_zip.py  dict.py  list-set-tuple.py
08/: # CSV - Comma Separated Values.py  file.py  functuon_args.py  import_to_dict.py  operators.py  pathlib_1.py  read_CSV.py
09/: cinverter_use_franf.py  conv_usd_ils_api.py  converter_usd_ils.py  crud_for_json.py  data.json  dict_operator_func.py  file.py  import json_for_ILS.py  rates_1.json  users.json
11/: error.py
12/: DB.db  DB_project.sqbpro  MOCK_DATA (8).csv  MOCK_DATA (9).csv  exeption_and_error.py
13/: db.db-journal  employees1.csv  null_test.csv  students.csv
14/: 2079_employees2.csv  2079_users_1.csv  MOCK_DATA (10).csv  connect_create_json.py  db13.db  db13.sqbpro
15/: 2079_departments_1.csv  script1_connect_to_db.py  script2_create_table.py  script3_populate_table.py  script4_fetch_result.py  users1.csv  wwwwww.db
15/SQLliteDB_Manager/: main.py  pyproject.toml  test.db
15/SQLliteDB_Manager/budget_db/: budget.sqlite
15/SQLliteDB_Manager/budget_reports/: transactions.csv
15/SQLliteDB_Manager/mysqlitepackage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
15/SQLliteDB_Manager/mysqllitepackage/: __init__.py  my_utils.py
18/: nested_function.py  (+3 more)
(+161 files in other folders)
